@@ -1057,9 +1057,9 @@ Channel.prototype.broadcastNewUser = function(user) {
     // If the channel is empty and isn't registered, the first person
     // gets ownership of the channel (temporarily)
     if(self.dbloaded && self.users.length == 1 && !self.registered) {
-        user.rank = (user.rank < Rank.Owner) ? 10 : user.rank;
+        user.rank = (user.rank < 10) ? 10 : user.rank;
         user.socket.emit("channelNotRegistered");
-        user.socket.emit("rank", 10);
+        user.socket.emit("rank", user.rank);
     }
     self.server.db.listAliases(user.ip, function (err, aliases) {
         if(err) {
@@ -1431,6 +1431,15 @@ Channel.prototype.addMedia = function(data, user) {
             self.cacheMedia(item.media);
         q.release();
     };
+
+    // Pre-cached data (e.g. from a playlist)
+    if (typeof data.title === "string" && data.type !== "cu") {
+        self.plqueue.queue(function (q) {
+            var m = new Media(data.id, data.title, data.seconds, data.type);
+            afterData.bind(self, q, false)(m);
+        });
+        return;
+    }
 
     // special case for youtube playlists
     if (data.type === "yp") {
