@@ -169,12 +169,11 @@ Playlist.prototype.add = function(item, pos) {
             return "This item is already on the playlist";
         }
 
-        self.remove(it.uid, function () {
-            self.channel.sendAll("delete", {
-                uid: it.uid
-            });
-            self.channel.broadcastPlaylistMeta();
+        self.remove(it.uid);
+        self.channel.sendAll("delete", {
+            uid: it.uid
         });
+        self.channel.broadcastPlaylistMeta();
     }
 
     if(pos == "append") {
